--- a/style.css
+++ b/style.css
@@ -1,15 +1,34 @@
 body{
-    background-color: black;
+    background-image: url(https://i.gifer.com/XzZg.gif);
 }
 
 h1{
-    color: yellow;
+    color: cyan;
 }
 
-h2{
-    color: yellow;
+h3{
+    color: cyan;
+    text-decoration: underline;
+    text-align: center;
+    margin: -1%;
 }
 
 #planetImg{
     height: 200px;
+}
+
+#infoCard{
+    border-color: cyan;
+    border-style: double;
+    border-width: thick;
+    background-color: cadetblue;
+    color: cyan;
+    padding: 1%;
+    font-family: 'Courier New', monospace;
+    width: 300px;
+}
+
+#symbol{
+    color: gold;
+    text-shadow: 5px 5px 10px gold;
 }
